--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "weather-api",
+  "type": "module",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js",
+    "test": ""
   },
   "keywords": [],
   "author": "Shubham Wagh",
@@ -13,6 +15,7 @@
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.4.1"
+    "mongoose": "^8.4.1",
+    "nodemon": "^3.1.3"
   }
 }
