--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "this is weather api to fetch real time weather data",
   "dependencies": {
     "axios": "^1.7.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.1",
