--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.3.1",
     "mongoose": "^8.4.1",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.3"
   }
 }
